--- a/anotacoes/estilo/style.css
+++ b/anotacoes/estilo/style.css
@@ -73,6 +73,45 @@ article p{
     font-size: 1em;
     padding: 5px;
 }
+a.ex{
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--cor4);
+    padding: 6px;
+}
+a.ex:hover{
+    color: var(--cor0);
+}
+p.pergunta{
+    font-size: 1.6em;
+}
+ul{
+    padding: 10px;
+    width: 350px;
+    margin: auto;
+    background-color: var(--cor3);
+    list-style-type: none;
+    columns: 2;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.296);
+    border-radius: 10px;
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.35);
+
+}
+li{
+    padding: 5px;
+    color: white;
+    font-weight: bold;
+}
+.lopcoes{
+    display: none;
+}
+
+li.opcoes:hover > .lopcoes{
+    display: block;
+    color: orangered;
+    transition-duration: .5s;
+}
 
 
 
