--- a/anotacoes/estilo/style.css
+++ b/anotacoes/estilo/style.css
@@ -67,11 +67,18 @@ article h1{
     font-size: 2.5em;
     text-align: left;
 }
+.ch1{
+    text-align: center;
+}
 article p{
     text-indent: 30px;
     line-height: 1.5em;
     font-size: 1em;
     padding: 5px;
+}
+span{
+    background-color: var(--cor1);
+    font-weight: bold;
 }
 a.ex{
     font-weight: bold;
