--- a/anotacoes/estilo/style.css
+++ b/anotacoes/estilo/style.css
@@ -105,8 +105,14 @@ ul{
     box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.35);
 
 }
+.ldois{
+    margin-left: 50px;
+    columns: 1;
+    width: 100px;
+}
 li{
     padding: 5px;
+    margin: auto;
     color: white;
     font-weight: bold;
 }
